# dumb-trace

./: CMakeLists.txt  README.md
src/: dumb-hist.cpp  dumb-instrument.cpp  dumb-trace.cpp
test/: Makefile  blocks.txt  foo-hist  foo-hist.txt  foo-instr.bc  foo-trace  foo-trace.txt  foo.bc  foo.c  includes
